<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/comment_row_iv_profile_image"
        android:layout_width="@dimen/size_50dp"
        android:layout_height="@dimen/size_50dp"
        app:srcCompat="@drawable/ic_profile"
        tools:ignore="MissingConstraints" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:elevation="@dimen/size_8dp"
        app:cardBackgroundColor="@color/light_grey"
        app:cardCornerRadius="@dimen/size_8dp"
        app:layout_constraintLeft_toRightOf="@+id/comment_row_iv_profile_image">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comment_row_tv_posted_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/comment_row_tv_comment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/comment_row_tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:padding="@dimen/size_8dp"
        android:text="@string/hour"
        android:textColor="@color/dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_row_iv_profile_image" />

    <TextView
        android:id="@+id/comment_row_tv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:padding="@dimen/size_8dp"
        android:text="@string/like"
        android:textColor="@color/dark_grey"
        app:layout_constraintLeft_toRightOf="@+id/comment_row_tv_time"
        app:layout_constraintTop_toBottomOf="@+id/comment_row_iv_profile_image" />

    <TextView
        android:id="@+id/comment_row_tv_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:padding="@dimen/size_8dp"
        android:text="@string/reply"
        android:textColor="@color/dark_grey"
        app:layout_constraintLeft_toRightOf="@+id/comment_row_tv_like"
        app:layout_constraintTop_toBottomOf="@+id/comment_row_iv_profile_image" />

    <TextView
        android:id="@+id/comment_row_tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:padding="@dimen/size_8dp"
        android:text="@string/message"
        android:textColor="@color/dark_grey"
        app:layout_constraintLeft_toRightOf="@+id/comment_row_tv_reply"
        app:layout_constraintTop_toBottomOf="@+id/comment_row_iv_profile_image" />

</android.support.constraint.ConstraintLayout>