<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_8dp"
    android:elevation="@dimen/size_8dp"
    app:cardCornerRadius="@dimen/size_8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp">

        <TextView
            android:id="@+id/post_row_tv_posted_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/post_row_tv_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@id/post_row_tv_posted_by" />

        <View
            android:id="@+id/post_row_v_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:layout_margin="@dimen/size_8dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/post_row_tv_post_title" />

        <LinearLayout
            android:id="@+id/post_row_ll_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_row_v_divider">

            <ImageView
                android:layout_width="@dimen/size_25dp"
                android:layout_height="@dimen/size_25dp"
                android:layout_margin="@dimen/size_8dp"
                android:src="@drawable/ic_like" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/post_row_ll_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/post_row_ll_like"
            app:layout_constraintTop_toBottomOf="@+id/post_row_v_divider">

            <ImageView
                android:layout_width="@dimen/size_25dp"
                android:layout_height="@dimen/size_25dp"
                android:layout_margin="@dimen/size_8dp"
                android:src="@drawable/ic_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>